--- a/XUnitTestProject1/XUnitTestProject1.csproj
+++ b/XUnitTestProject1/XUnitTestProject1.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\2\ArrayFindIndex.csproj" />
     <ProjectReference Include="..\Max_Rec\Max_Rec.csproj" />
   </ItemGroup>
 
